# storage/api-docs/api-docs.json
@@ -6,13 +6,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/drugs": {
+        "/api/drugs": {
             "get": {
                 "tags": [
                     "Drug"
                 ],
                 "summary": "薬を一覧で取得する",
-                "operationId": "907ee73355e8bf5327ba2ddc85fc4f80",
+                "operationId": "229342acfe924e746eed9dffe7f5e87c",
                 "parameters": [
                     {
                         "name": "page",
@@ -51,7 +51,7 @@
                     "Drug"
                 ],
                 "summary": "薬の作成",
-                "operationId": "afb1b002ceb453f0f7bc89d10202aa60",
+                "operationId": "b3d4ab4ecb9f25fdf058053bf5b403d6",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -86,6 +86,46 @@
             }
         },
         "/api/drugs/{id}": {
+            "get": {
+                "tags": [
+                    "Drug"
+                ],
+                "summary": "薬の詳細",
+                "operationId": "561c15d39778d46c80616e808022ee8d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "薬ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/get_drug_responder"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/api_error_responder"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "Drug"
@@ -126,20 +166,119 @@
                 }
             }
         },
-        "/drugs/{id}": {
+        "/api/medication_histories": {
+            "get": {
+                "tags": [
+                    "MedicationHistory"
+                ],
+                "summary": "服薬履歴を一覧で取得する",
+                "operationId": "25328c65242b331996bcd2352dfeaeb9",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "ページ番号",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "各ページで返す個数",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "DiscordのUserId",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/get_medication_history_list_responder"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
-                    "Drug"
+                    "MedicationHistory"
                 ],
-                "summary": "薬の詳細",
-                "operationId": "af29db84fe72d2e69334ac68f42d972f",
+                "summary": "服薬履歴の作成",
+                "operationId": "600aa0054e7e201b8738d0c6c112e1f3",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/create_medication_history_request"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Successful",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/200_empty"
+                                    "$ref": "#/components/schemas/create_medication_history_responder"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/api_error_responder"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/medication_histories/{id}": {
+            "get": {
+                "tags": [
+                    "MedicationHistory"
+                ],
+                "summary": "服薬履歴の詳細",
+                "operationId": "2f09f60986d8c57155c46c154b756a92",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "服薬履歴ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/get_medication_history_responder"
                                 }
                             }
                         }
@@ -208,6 +347,57 @@
                 "type": "object"
             },
             "drug_list_result": {
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/base_api_paginator"
+                    }
+                ]
+            },
+            "medication_history_detail": {
+                "required": [
+                    "id",
+                    "amount",
+                    "drug",
+                    "createdAt",
+                    "updatedAt"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "userId": {
+                        "type": "integer",
+                        "example": 930316
+                    },
+                    "amount": {
+                        "type": "integer",
+                        "example": 10
+                    },
+                    "drugId": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "drugName": {
+                        "type": "string",
+                        "example": "ラツーダ"
+                    },
+                    "drugUrl": {
+                        "type": "string",
+                        "example": "https://example.com/"
+                    },
+                    "createdAt": {
+                        "type": "string",
+                        "example": "2022-01-01T00:00:00+09:00"
+                    },
+                    "updatedAt": {
+                        "type": "string",
+                        "example": "2022-03-16T00:00:00+09:00"
+                    }
+                },
+                "type": "object"
+            },
+            "medication_history_list_result": {
                 "allOf": [
                     {
                         "$ref": "#/components/schemas/base_api_paginator"
@@ -363,6 +553,86 @@
                         "type": "object"
                     }
                 ]
+            },
+            "create_medication_history_request": {
+                "properties": {
+                    "drug_id": {
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "type": "integer"
+                    },
+                    "amount": {
+                        "type": "integer"
+                    },
+                    "medication_date": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "create_medication_history_responder": {
+                "type": "object",
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/base_responder"
+                    },
+                    {
+                        "properties": {
+                            "data": {
+                                "properties": {
+                                    "drug": {
+                                        "$ref": "#/components/schemas/medication_history_detail"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "type": "object"
+                    }
+                ]
+            },
+            "get_medication_history_list_responder": {
+                "type": "object",
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/base_responder"
+                    },
+                    {
+                        "properties": {
+                            "data": {
+                                "properties": {
+                                    "medicationHistories": {
+                                        "$ref": "#/components/schemas/medication_history_list_result"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "type": "object"
+                    }
+                ]
+            },
+            "get_medication_history_responder": {
+                "type": "object",
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/base_responder"
+                    },
+                    {
+                        "properties": {
+                            "data": {
+                                "properties": {
+                                    "medicationHistory": {
+                                        "$ref": "#/components/schemas/medication_history_detail"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "type": "object"
+                    }
+                ]
             }
         }
     },
@@ -370,6 +640,10 @@
         {
             "name": "Drug",
             "description": "Drug"
+        },
+        {
+            "name": "MedicationHistory",
+            "description": "MedicationHistory"
         }
     ]
 }
